# my-first-binder

./: .jupyterlite.doit.db  AUTHORS.md  environment-dev.yml  hello.html  package.json  setup.cfg  turbofan.html
content/: turbofan.ipynb
my-first-binder/: hello.ipynb  turbofan.html  turbofan.ipynb
tests/: default_test.py
