[metadata]
name =my-first-binder
version = attr: my-first-binder._version.__version__
author =LouisFonteneauMarce
description =
long_description = file: README.md, CHANGELOG.md
home-page =
license = Proprietary License
license-file = LICENSE
keywords =
classifiers =
	Intended Audience :: End Users/Desktop
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	License :: Other/Proprietary License
	Natural Language :: English
	Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.6